--- a/aula-03/index.html
+++ b/aula-03/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <header>
-    <img src="https://pbs.twimg.com/profile_images/1254857099391238144/gpdJCD7R_400x400.jpg"
+    <img src="https://pbs.twimg.com/profile_images/1254857099391238144/gpdJCD7R_400x400.jpg">
     <h1>Jesiel Viana</h1>
   </header>
   <main>
